--- a/public/index.html
+++ b/public/index.html
@@ -10,87 +10,62 @@
 
   <title>Business Frontpage - Start Bootstrap Template</title>
 
-  
+
+  <link href="../src/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="../src/css/business-frontpage.css" rel="stylesheet">
+  <link href="../src/css/main.css" rel="stylesheet">
+
+
+
 
 </head>
 
 <body>
-  
-  <div id="header"></div>
-  <div id="banner"></div>
-  <div id="search"></div>
-  <div id="mainComponent"></div>
-  
-  
-  <div ></div>
-  <div className="row">
-    <div className="col-md-8 mb-5">
-      <h2>What We Do</h2>
-      <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
-      <a className="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="/#">Start Bootstrap</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./search">Buscar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div className="col-md-4 mb-5">
-      <h2>Contact Us</h2>
-      <hr>
-      <address>
-        <strong>Start Bootstrap</strong>
-        <br>3481 Melrose Place
-        <br>Beverly Hills, CA 90210
-        <br>
-      </address>
-      <address>
-        <abbr title="Phone">P:</abbr>
-        (123) 456-7890
-        <br>
-        <abbr title="Email">E:</abbr>
-        <a href="mailto:#">name@example.com</a>
-      </address>
-    </div>
-  </div>
- 
+  </nav>
 
-  <div className="row">
-    <div className="col-md-4 mb-5">
-      <div className="card h-100">
-        <img className="card-img-top" src="http://placehold.it/300x200" alt="">
-        <div className="card-body">
-          <h4 className="card-title">Card title</h4>
-          <p className="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
-        </div>
-        <div className="card-footer">
-          <a href="#" className="btn btn-primary">Find Out More!</a>
-        </div>
-      </div>
-    </div>
-    <div className="col-md-4 mb-5">
-      <div className="card h-100">
-        <img className="card-img-top" src="http://placehold.it/300x200" alt=""></img>
-        <div className="card-body">
-          <h4 className="card-title">Card title</h4>
-          <p className="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
-        </div>
-        <div className="card-footer">
-          <a href="#" className="btn btn-primary">Find Out More!</a>
-        </div>
-      </div>
-    </div>
-    <div className="col-md-4 mb-5">
-      <div className="card h-100">
-        <img className="card-img-top" src="http://placehold.it/300x200" alt=""></img>
-        <div className="card-body">
-          <h4 className="card-title">Card title</h4>
-          <p className="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-        </div>
-        <div className="card-footer">
-          <a href="#" className="btn btn-primary">Find Out More!</a>
-        </div>
-      </div>
-    </div>
-  </div>
   
- 
+  <div >
+    <figure>
+      <img class="bgBanner img-responsive" src="images/banner.jpg" alt="Minha Figura">	
+      
+    </figure>
+  </div>
+
+  <div id="root"></div>
+
+
+
+
+
+
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
@@ -99,6 +74,7 @@
     </div>
     <!-- /.container -->
   </footer>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="../src/vendor/jquery/jquery.min.js"></script>
